tests/chapter_17/invalid_types/scalar_expressions/void_if_condition.c
int main(void) {
  int x = 10;
  if ((void)x)
    return 0;
  return 1;
}